add github link

--- a/pages/testcontainers-guides-ja/getting-started-with-testcontainers-for-java.mdx
+++ b/pages/testcontainers-guides-ja/getting-started-with-testcontainers-for-java.mdx
@@ -3,9 +3,19 @@ title: Java 向け Testcontainers 入門
 description: このガイドでは、Java 向け Testcontainers の使い方を始めるために、PostgreSQL を使用したテストの方法を説明します。
 ---
 
-import { Callout } from 'nextra/components'
+import { Callout, Cards } from 'nextra/components'
+import { FaGithub } from "react-icons/fa";
 
 # Java 向け Testcontainers 入門
+
+<br />
+<br />
+
+<Cards.Card
+  icon={<FaGithub />}
+  title="コードを入手する"
+  href="https://github.com/testcontainers/tc-guide-getting-started-with-testcontainers-for-java"
+/>
 
 Testcontainers は、Docker コンテナでラップされた実際のサービスを使用して統合テストを簡単かつ軽量な API で構築できるテストライブラリです。Testcontainers を使用すると、本番環境で使用しているサービスと同じ種類のサービスと対話するテストを、モックやインメモリサービスを使用せずに記述できます。
 
