--- a/pages/testcontainers-guides-ja/getting-started-with-testcontainers-for-nodejs.mdx
+++ b/pages/testcontainers-guides-ja/getting-started-with-testcontainers-for-nodejs.mdx
@@ -3,9 +3,19 @@ title: Node.js で Testcontainers を使い始める
 description: このガイドでは、PostgreSQL を使用したテストを例に、Node.js で Testcontainers を使い始める方法を説明します。
 ---
 
-import { Callout } from 'nextra/components'
+import { Callout, Cards } from 'nextra/components'
+import { FaGithub } from "react-icons/fa";
 
 # Node.js で Testcontainers を使い始める
+
+<br />
+<br />
+
+<Cards.Card
+  icon={<FaGithub />}
+  title="コードを入手する"
+  href="https://github.com/testcontainers/tc-guide-getting-started-with-testcontainers-for-nodejs"
+/>
 
 Testcontainers は、Docker コンテナでラップされた実際のサービスを使用して統合テストを簡単かつ軽量にセットアップするためのテストライブラリです。Testcontainers を使用することで、モックやインメモリサービスを使わずに、本番環境で使用するのと同じ種類のサービスとやり取りするテストを記述できます。
 
