--- a/pages/testcontainers-guides-ja/testing-spring-boot-rest-api-using-testcontainers.mdx
+++ b/pages/testcontainers-guides-ja/testing-spring-boot-rest-api-using-testcontainers.mdx
@@ -3,7 +3,19 @@ title: Java Spring Boot プロジェクトで Testcontainers を使い始める
 description: このガイドでは、Testcontainers を使用して Spring Boot および Spring Data JPA を基盤とした REST API をテストする方法を説明します。
 ---
 
+import { Cards } from 'nextra/components'
+import { FaGithub } from "react-icons/fa";
+
 # Java Spring Boot プロジェクトで Testcontainers を使い始める
+
+<br />
+<br />
+
+<Cards.Card
+  icon={<FaGithub />}
+  title="コードを入手する"
+  href="https://github.com/testcontainers/tc-guide-testing-spring-boot-rest-api"
+/>
 
 このガイドでは、以下の内容を学びます。
 
