--- a/pages/docker-security-ja/for-admins/hardened-desktop/settings-management/configure-json-file.mdx
+++ b/pages/docker-security-ja/for-admins/hardened-desktop/settings-management/configure-json-file.mdx
@@ -186,6 +186,8 @@ macOS や Windows でインストーラーの `--admin-settings` フラグを使
 
 ### 一般設定
 
+<br />
+
 <Table>
   <thead>
     <Tr>
@@ -249,6 +251,8 @@ macOS や Windows でインストーラーの `--admin-settings` フラグを使
 
 ### ファイル共有とエミュレーション
 
+<br />
+
 <Table>
   <thead>
     <Tr>
@@ -288,6 +292,8 @@ macOS や Windows でインストーラーの `--admin-settings` フラグを使
 
 ### Docker Scout
 
+<br />
+
 <Table>
   <thead>
     <Tr>
@@ -308,6 +314,8 @@ macOS や Windows でインストーラーの `--admin-settings` フラグを使
 </Table>
 
 ### プロキシ
+
+<br />
 
 <Table>
   <thead>
@@ -339,3 +347,199 @@ macOS や Windows でインストーラーの `--admin-settings` フラグを使
     </Tr>
   </tbody>
 </Table>
+
+### コンテナプロキシ
+
+<br />
+
+<Table>
+  <thead>
+    <Tr>
+      <Th>パラメーター</Th>
+      <Th>OS</Th>
+      <Th>説明</Th>
+      <Th>バージョン</Th>
+    </Tr>
+  </thead>
+  <tbody>
+    <Tr>
+      <Td>`containersProxy`</Td>
+      <Td></Td>
+      <Td>エアギャップ環境のコンテナを作成します。詳細は[エアギャップコンテナ](/docker-security-ja/for-admins/hardened-desktop/air-gapped-containers)をご覧ください。</Td>
+      <Td>Docker Desktop バージョン 4.29 以降</Td>
+    </Tr>
+  </tbody>
+</Table>
+
+### Linux VM
+
+<br />
+
+<Table>
+  <thead>
+    <Tr>
+      <Th>パラメーター</Th>
+      <Th>OS</Th>
+      <Th>説明</Th>
+      <Th>バージョン</Th>
+    </Tr>
+  </thead>
+  <tbody>
+    <Tr>
+      <Td>`linuxVM`</Td>
+      <Td></Td>
+      <Td>Linux VM オプションに関連するパラメーターと設定をグループ化しています。</Td>
+      <Td></Td>
+    </Tr>
+    <Tr>
+      <Td>`wslEngineEnabled`</Td>
+      <Td>Windows のみ</Td>
+      <Td>`value` を `true` に設定すると、Docker Desktop は WSL 2 ベースのエンジンを使用します。これにより、インストール時に `--backend=<backend name>` フラグで設定された内容が上書きされます。</Td>
+      <Td></Td>
+    </Tr>
+    <Tr>
+      <Td>`dockerDaemonOptions`</Td>
+      <Td></Td>
+      <Td>`value` を `true` に設定すると、Docker エンジン構成ファイルのオプションが上書きされます。詳細は [Docker Engine リファレンス](https://docs.docker.com/reference/cli/dockerd/#daemon-configuration-file)をご覧ください。セキュリティ向上のため、一部の構成属性は Enhanced Container Isolation が有効な場合に上書きされる可能性があります。</Td>
+      <Td></Td>
+    </Tr>
+    <Tr>
+      <Td>`vpnkitCIDR`</Td>
+      <Td></Td>
+      <Td>`*.docker.internal` のための vpnkit DHCP/DNS に使用されるネットワーク範囲を上書きします。</Td>
+      <Td></Td>
+    </Tr>
+  </tbody>
+</Table>
+
+### Windows コンテナ
+
+<br />
+
+<Table>
+  <thead>
+    <Tr>
+      <Th>パラメーター</Th>
+      <Th>OS</Th>
+      <Th>説明</Th>
+      <Th>バージョン</Th>
+    </Tr>
+  </thead>
+  <tbody>
+    <Tr>
+      <Td>`windowsContainers`</Td>
+      <Td></Td>
+      <Td>`windowsContainers` オプションに関連するパラメーターと設定をグループ化しています。</Td>
+      <Td></Td>
+    </Tr>
+    <Tr>
+      <Td>`dockerDaemonOptions`</Td>
+      <Td></Td>
+      <Td>Linux デーモン構成ファイルのオプションを上書きします。詳細は [Docker Engine リファレンス](https://docs.docker.com/reference/cli/dockerd/#daemon-configuration-file)をご覧ください。</Td>
+      <Td></Td>
+    </Tr>
+  </tbody>
+</Table>
+
+<Callout type='info'>
+  この設定は Docker Admin Console では設定できません。
+</Callout>
+
+### Kubernetes
+
+<br />
+
+<Table>
+  <thead>
+    <Tr>
+      <Th>パラメーター</Th>
+      <Th>OS</Th>
+      <Th>説明</Th>
+      <Th>バージョン</Th>
+    </Tr>
+  </thead>
+  <tbody>
+    <Tr>
+      <Td>`kubernetes`</Td>
+      <Td></Td>
+      <Td>`enabled` を `true` に設定すると、Docker Desktop 起動時に Kubernetes の単一ノードクラスタが開始されます。`showSystemContainers` を `true` に設定すると、Kubernetes コンテナが Docker Desktop ダッシュボードおよび `docker ps` コマンドで表示されます。`imagesRepository` を使用して、Docker Desktop が Kubernetes イメージをプルするリポジトリを指定できます（例: `"imagesRepository": "registry-1.docker.io/docker"`）。</Td>
+      <Td></Td>
+    </Tr>
+  </tbody>
+</Table>
+
+### 開発中の機能
+
+<br />
+
+<Table>
+  <thead>
+    <Tr>
+      <Th>パラメーター</Th>
+      <Th>OS</Th>
+      <Th>説明</Th>
+      <Th>バージョン</Th>
+    </Tr>
+  </thead>
+  <tbody>
+    <Tr>
+      <Td>`allowExperimentalFeatures`</Td>
+      <Td></Td>
+      <Td>`value` を `false` に設定すると、実験的機能が無効になります。</Td>
+      <Td></Td>
+    </Tr>
+    <Tr>
+      <Td>`allowBetaFeatures`</Td>
+      <Td></Td>
+      <Td>`value` を `false` に設定すると、ベータ機能が無効になります。</Td>
+      <Td></Td>
+    </Tr>
+  </tbody>
+</Table>
+
+### Enhanced Container Isolation (強化されたコンテナー分離)
+
+<br />
+
+<Table>
+  <thead>
+    <Tr>
+      <Th>パラメーター</Th>
+      <Th>OS</Th>
+      <Th>説明</Th>
+      <Th>バージョン</Th>
+    </Tr>
+  </thead>
+  <tbody>
+    <Tr>
+      <Td>`enhancedContainerIsolation`</Td>
+      <Td></Td>
+      <Td>`value` を `true` に設定すると、Docker Desktop はすべてのコンテナを Linux ユーザー名前空間を介して非特権として実行し、Docker Desktop VM 内の重要な構成を変更できないようにし、他の高度な分離技術を使用します。詳細は [Enhanced Container Isolation](/docker-security-ja/for-admins/hardened-desktop/enhanced-container-isolation) をご覧ください。</Td>
+      <Td></Td>
+    </Tr>
+    <Tr>
+      <Td>`dockerSocketMount`</Td>
+      <Td></Td>
+      <Td>デフォルトでは、Enhanced Container Isolation は Docker エンジンソケットのコンテナへのバインドマウント（例: `docker run -v /var/run/docker.sock:/var/run/docker.sock ...`）をブロックします。これにより、制御された方法で緩和することができます。詳細は [ECI 構成](/docker-security-ja/for-admins/hardened-desktop/enhanced-container-isolation/config)をご覧ください。</Td>
+      <Td></Td>
+    </Tr>
+    <Tr>
+      <Td>`imageList`</Td>
+      <Td></Td>
+      <Td>Docker エンジンソケットをバインドマウントできるコンテナイメージを指定します。</Td>
+      <Td></Td>
+    </Tr>
+    <Tr>
+      <Td>`commandList`</Td>
+      <Td></Td>
+      <Td>バインドマウントされた Docker エンジンソケットを介してコンテナが実行できるコマンドを制限します。</Td>
+      <Td></Td>
+    </Tr>
+  </tbody>
+</Table>
+
+## 手順3: Docker Desktop の再起動
+
+<Callout type='info'>
+  `admin-settings.json` ファイルで行った変更が期待通りに動作するかをローカルでテストしてください。
+</Callout>
