--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,10 +4,12 @@ title: tadashi0713 Docs
 ---
 
 import { Cards } from 'nextra/components'
-import { FaDocker, FaCompass, FaLock } from "react-icons/fa";
-import { AiOutlineCloudServer } from "react-icons/ai";
-import { TbHexagon3D } from "react-icons/tb";
-import { FiHexagon } from "react-icons/fi";
+import { FaDocker } from "react-icons/fa"
+import { AiOutlineCloudServer } from "react-icons/ai"
+import { TbHexagon3D } from "react-icons/tb"
+import { FiHexagon } from "react-icons/fi"
+import { MdOutlineQueryStats } from "react-icons/md"
+import { FaShield } from "react-icons/fa6"
 
 # Welcome
 
@@ -32,7 +34,7 @@ Have a good read!
 <br />
 
 <Cards.Card
-  icon={<FaLock />}
+  icon={<FaShield />}
   title="Docker セキュリティ(WIP)"
   href="/docker-security-ja"
   arrow
@@ -44,7 +46,7 @@ Have a good read!
 <br />
 
 <Cards.Card
-  icon={<FaCompass />}
+  icon={<MdOutlineQueryStats />}
   title="Docker Scout ドキュメント"
   href="/scout-ja"
   arrow
