--- a/pages/docker-security-ja/for-admins/hardened-desktop.mdx
+++ b/pages/docker-security-ja/for-admins/hardened-desktop.mdx
@@ -5,6 +5,7 @@ description: Hardened Docker Desktopの概要と主な機能
 
 import { Callout, Cards } from 'nextra/components'
 import { GoShieldLock } from "react-icons/go"
+import { MdSecurity } from "react-icons/md"
 
 # Hardened Docker Desktop
 
@@ -46,3 +47,14 @@ Hardened Desktop の機能は個別に動作しますが、相互に連携して
 />
 
 Settings Management を活用して、開発者のワークフローをどのように保護できるかを学びましょう。
+
+<br />
+
+<Cards.Card
+  icon={<MdSecurity />}
+  title="Enhanced Container Isolation (強化されたコンテナ分離)"
+  href="/docker-security-ja/for-admins/hardened-desktop/enhanced-container-isolation"
+  arrow
+/>
+
+Enhanced Container Isolation (強化されたコンテナ分離)がどのようにコンテナ攻撃を防ぐのかを理解しましょう。
