--- a/pages/scout-ja/concepts/sbom.mdx
+++ b/pages/scout-ja/concepts/sbom.mdx
@@ -30,5 +30,5 @@ SBOMは、[アドバイザリーデータベース](/scout-ja/deep-dive/advisory
 
 SBOMの生成方法やDocker ScoutでのSBOMの活用方法について詳しく学ぶには、以下を参照してください：
 
-- [Docker Scoutにおけるイメージ分析](/scout/explore/analysis)
+- [Docker Scoutにおけるイメージ分析](/scout-ja/explore/analysis)
 - [SBOMの表示と作成](/scout-ja/how-tos/view-create-sboms)
