--- a/pages/testcontainers-guides-ja/testing-spring-boot-rest-api-using-testcontainers.mdx
+++ b/pages/testcontainers-guides-ja/testing-spring-boot-rest-api-using-testcontainers.mdx
@@ -346,4 +346,4 @@ Postgres の Docker コンテナが起動し、すべてのテストが成功す
 
 Testcontainers ライブラリを使用することで、モックやインメモリデータベースではなく、本番環境で使用しているのと同じ種類のデータベース（Postgres）を用いて統合テストを記述することができました。モックを使用せず、実際のサービスと通信しているため、コードをリファクタリングしてもアプリケーションが期待通りに動作していることを確認できます。
 
-Testcontainers についてさらに詳しく知りたい場合は、http://testcontainers.com をご覧ください。
+Testcontainers についてさらに詳しく知りたい場合は、https://testcontainers.com をご覧ください。
