--- a/pages/testcontainers-guides-ja/testing-spring-boot-rest-api-using-testcontainers.mdx
+++ b/pages/testcontainers-guides-ja/testing-spring-boot-rest-api-using-testcontainers.mdx
@@ -4,7 +4,7 @@ description: このガイドでは、Testcontainers を使用して Spring Boot 
 ---
 
 import { Cards } from 'nextra/components'
-import { FaGithub } from "react-icons/fa";
+import { FaGithub } from "react-icons/fa"
 
 # Java Spring Boot プロジェクトで Testcontainers を使い始める
 
