--- a/pages/testcontainers-guides-ja/introducing-testcontainers.mdx
+++ b/pages/testcontainers-guides-ja/introducing-testcontainers.mdx
@@ -4,7 +4,7 @@ description: このガイドでは、Testcontainers の概要を紹介し、Test
 ---
 
 import { Cards } from 'nextra/components'
-import { FaGithub } from "react-icons/fa";
+import { FaGithub } from "react-icons/fa"
 
 # Testcontainers とは何か、なぜ使うべきなのか？
 
