--- a/pages/testcontainers-guides-ja.mdx
+++ b/pages/testcontainers-guides-ja.mdx
@@ -8,6 +8,7 @@ import { FiHexagon } from "react-icons/fi";
 import { FaJava, FaNodeJs, FaPython, FaDesktop, FaAws } from "react-icons/fa";
 import { SiSpring, SiDotnet } from "react-icons/si"
 import { FaGolang } from "react-icons/fa6"
+import { DiDotnet } from "react-icons/di"
 
 # Testcontainers ガイド
 
@@ -96,6 +97,18 @@ import { FaGolang } from "react-icons/fa6"
 />
 
 このガイドでは、PostgreSQL を使用したテストを例に挙げて、.NET で Testcontainers を使い始める方法を説明します。
+
+<br />
+<br />
+
+<Cards.Card
+  icon={<DiDotnet />}
+  title="ASP.NET Core Web アプリケーションのテスト"
+  href="/testcontainers-guides-ja/testing-an-aspnet-core-web-app"
+  arrow
+/>
+
+このガイドは、Microsoft の「[ASP.NET Core における統合テスト](https://learn.microsoft.com/ja-jp/aspnet/core/test/integration-tests)」を基に作成されており、それに Testcontainers を活用する方法を説明します。
 
 <br />
 <br />
