--- a/pages/testcontainers-guides-ja.mdx
+++ b/pages/testcontainers-guides-ja.mdx
@@ -31,7 +31,7 @@ import { DiDotnet } from "react-icons/di"
 
 <Cards.Card
   icon={<FaJava />}
-  title="Java 向け Testcontainers 入門"
+  title="Java で Testcontainers を使い始める"
   href="/testcontainers-guides-ja/getting-started-with-testcontainers-for-java"
   arrow
 />
@@ -80,7 +80,7 @@ import { DiDotnet } from "react-icons/di"
 <Cards.Card
   icon={<FaGolang />}
   title="Go で Testcontainers を使い始める"
-  href="/testcontainers-guides-ja/getting-started-with-testcontainers-for-python"
+  href="/testcontainers-guides-ja/getting-started-with-testcontainers-for-go"
   arrow
 />
 
