--- a/pages/testcontainers-guides-ja/getting-started-with-testcontainers-for-java.mdx
+++ b/pages/testcontainers-guides-ja/getting-started-with-testcontainers-for-java.mdx
@@ -1,12 +1,12 @@
 ---
-title: Java 向け Testcontainers 入門
+title: Java で Testcontainers を使い始める
 description: このガイドでは、Java 向け Testcontainers の使い方を始めるために、PostgreSQL を使用したテストの方法を説明します。
 ---
 
 import { Callout, Cards } from 'nextra/components'
 import { FaGithub } from "react-icons/fa"
 
-# Java 向け Testcontainers 入門
+# Java で Testcontainers を使い始める
 
 <br />
 <br />
