--- a/pages/testcontainers-guides-ja.mdx
+++ b/pages/testcontainers-guides-ja.mdx
@@ -9,6 +9,7 @@ import { FaJava, FaNodeJs, FaPython, FaDesktop, FaAws } from "react-icons/fa";
 import { SiSpring, SiDotnet } from "react-icons/si"
 import { FaGolang } from "react-icons/fa6"
 import { DiDotnet } from "react-icons/di"
+import { AiFillApi } from "react-icons/ai"
 
 # Testcontainers ガイド
 
@@ -109,6 +110,18 @@ import { DiDotnet } from "react-icons/di"
 />
 
 このガイドは、Microsoft の「[ASP.NET Core における統合テスト](https://learn.microsoft.com/ja-jp/aspnet/core/test/integration-tests)」を基に作成されており、それに Testcontainers を活用する方法を説明します。
+
+<br />
+<br />
+
+<Cards.Card
+  icon={<AiFillApi />}
+  title="MockServer を使用した REST API 統合テスト"
+  href="/testcontainers-guides-ja/testing-rest-api-integrations-using-mockserver"
+  arrow
+/>
+
+このガイドでは、Testcontainers の MockServer モジュールを使用して、Spring Boot アプリケーションで REST API 統合をテストする方法を説明します。
 
 <br />
 <br />
